--- a/src/RoomRow.css
+++ b/src/RoomRow.css
@@ -33,6 +33,7 @@
   border-radius: 5px;
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.5);
 }
+
 .row-header {
   height: 100%;
   border-radius: 5px 0px 0px 5px;
@@ -66,4 +67,9 @@
   align-items: center;
   padding-left: 16px;
   user-select: none;
+}
+
+.row-item.error {
+  justify-content: center;
+  background-color: #141752;
 }
